# advent-2023

./: Cargo.toml  learnings.md
src/: data2.rs  data3.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.input2.txt  day6.rs  debug.rs  main.rs  playground.rs  test.rs
